--- a/my-casino/config/cas.yml
+++ b/my-casino/config/cas.yml
@@ -14,12 +14,15 @@ defaults: &defaults
 development:
   <<: *defaults
   authenticators:
-    static:
-      class: "CASino::StaticAuthenticator"
+    my_company_sql_database:
+      authenticator: 'ActiveRecord'
       options:
-        users:
-          testuser:
-            password: "foobar123"
+        table: 'users'
+        username_column: 'name'
+        password_column: 'password_hash'
+        extra_attributes:
+          email: 'email'
+          fullname: 'fullname'
 
 test:
   <<: *defaults
@@ -34,14 +37,12 @@ test:
 production:
   <<: *defaults
   authenticators:
-    my_company_ldap:
-      authenticator: "LDAP"
+    my_company_sql_database:
+      authenticator: 'ActiveRecord'
       options:
-        host: "localhost"
-        port: 12445
-        base: "dc=users,dc=example.com"
-        username_attribute: "uid"
-        encryption: "simple_tls"
+        table: 'users'
+        username_column: 'name'
+        password_column: 'password_hash'
         extra_attributes:
-          email: "mail"
-          fullname: "displayname"
+          email: 'email'
+          fullname: 'fullname'
